# BOTalign

./: pyproject.toml  test_BOTalign.py  test_comparison.py
src/BOTalign/: utils_BO.py
