[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BOTAlign"
version = "0.0.1"
authors = [
  { name="Amit Singer"},
  { name="Ruiyi Yang"},
]
description = "Bayesian Optimal Transport"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/RuiyiYang/BOTalign"